# bridges

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py  usage.py
.github/workflows/: ci.yml  release.yml
bridges/: __init__.py
bridges/core/: base.py  basic.py  cli.py  errors.py  types.py
bridges/interfaces/: __init__.py
bridges/interfaces/cli/: __init__.py  core.py  display.py  prompts.py
tests/: test_basic.py  test_cli_custom_types.py  test_cli_customization.py  test_cli_smoke.py  test_core_basic.py  test_core_context.py  test_core_errors.py  test_core_hooks.py  test_custom_types.py
