[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridges"
version = "0.1.0"
description = "A framework-agnostic middleware for automatic UI generation."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
where = ["bridges"]
